# topobathy

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: dem.md  m7001.md  vertical_datum.md
scripts/: build_z0_table.py  fetch_jma_tide_datums.py  genkai_m7001_dem.sh  genkai_m7001_to_tp.sh  genkai_plot_m7001_tp.sh  get_gsigeo.py  parse_jcg_datum_table.py  plot_dem.py
tests/: test_datum.py  test_grid.py  test_jbird.py  test_points.py
topobathy/: __init__.py  config.py
topobathy/cli/: __init__.py  build_datum_model.py  m7001_dem.py  m7001_to_tp.py  plot_m7001_tp.py
topobathy/data/: __init__.py  japan_tide_datums_jcg.csv  kanto_south_tp_minus_cd.csv
topobathy/datum/: __init__.py  geoid.py  separation.py  vertical.py
topobathy/grid/: __init__.py  dem.py  landmask.py
topobathy/io/: __init__.py  jbird.py  points.py
topobathy/plot/: __init__.py  contour.py
topobathy/utils/: __init__.py  geo.py
